--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>y</title>
+    <title>VUE前端模板</title>
   </head>
-  <body>
+  <body style="margin: 0;padding: 0;height: 100%">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
